--- a/.github/workflows/ci-bash-test.yml
+++ b/.github/workflows/ci-bash-test.yml
@@ -1,9 +1,11 @@
-name: Continuous Integration
+name: CI Bash Test
+
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
   pull_request:
+  push:
+      branches:
+          - main
 
 permissions:
   contents: read
