ci: only run checks when certain files change

--- a/.github/workflows/ci-integ-test.yml
+++ b/.github/workflows/ci-integ-test.yml
@@ -18,6 +18,9 @@ jobs:
   integ-tests:
     name: Integration Tests
     uses: ./.github/workflows/suite-integ-test.yml
+    permissions:
+      contents: read
+      pull-requests: read
     secrets: inherit
 
   integ-tests-summary:
