--- a/.github/workflows/ci-integ-test-full.yml
+++ b/.github/workflows/ci-integ-test-full.yml
@@ -21,4 +21,5 @@ jobs:
       cancel-in-progress: false
     with:
       runner-os: '["ubuntu-latest", "windows-latest", "macos-latest"]'
+      detect-changes: false
     secrets: inherit
