--- a/.github/workflows/ci-integ-test-full.yml
+++ b/.github/workflows/ci-integ-test-full.yml
@@ -5,6 +5,10 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'assert-equals/assert-equals'
+      - 'assert-file-exists/assert-file-exists'
+      - 'assert-not-equals/assert-not-equals'
 
 concurrency:
   group: integ-test
