--- a/.github/workflows/ci-integ-test.yml
+++ b/.github/workflows/ci-integ-test.yml
@@ -21,6 +21,8 @@ jobs:
     permissions:
       contents: read
       pull-requests: read
+    with:
+      detect-changes: ${{ github.event_name == 'pull_request' }}
     secrets: inherit
 
   integ-tests-summary:
