--- a/.github/workflows/integ-test-file-exists.yml
+++ b/.github/workflows/integ-test-file-exists.yml
@@ -6,6 +6,9 @@ on:
         type: string
         default: '["ubuntu-latest"]'
 
+permissions:
+  contents: read
+
 jobs:
   before-all:
     name: Before All
