--- a/.github/workflows/integ-test-not-equals.yml
+++ b/.github/workflows/integ-test-not-equals.yml
@@ -6,6 +6,9 @@ on:
         type: string
         default: '["ubuntu-latest"]'
 
+permissions:
+  contents: read
+
 jobs:
   test-two-values-not-equal-with-message:
     strategy:
