--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:recommended", "group:allNonMajor"],
+  "extends": ["config:recommended", "group:allNonMajor", "helpers:pinGitHubActionDigests", ":pinDependencies"],
   "schedule": ["before 12pm on Saturday"],
   "packageRules": [
     {
@@ -15,6 +15,5 @@
       "matchUpdateTypes": ["minor", "patch"],
       "platformAutomerge": true
     }
-  ],
-  "rangeStrategy": "bump"
+  ]
 }
