--- a/.github/workflows/ci-integ-test-full.yml
+++ b/.github/workflows/ci-integ-test-full.yml
@@ -8,6 +8,7 @@ on:
     paths:
       - 'assert-equals/assert-equals'
       - 'assert-file-exists/assert-file-exists'
+      - 'assert-file-not-exists/assert-file-not-exists'
       - 'assert-not-equals/assert-not-equals'
 
 concurrency:
