feat(assert-file-exists): allow all file types
this change has been made to make this action in line with the
assert-file-not-exists action.

--- a/.github/workflows/ci-bash-test.yml
+++ b/.github/workflows/ci-bash-test.yml
@@ -6,7 +6,7 @@ on:
     paths:
       - 'test/**'
       - 'assert-equals/**'
-      - 'assert-file-exists/**'
+      - 'assert-path-exists/**'
       - 'assert-file-not-exists/**'
       - 'assert-not-equals/**'
       - '.github/workflows/ci-bash-test.yml'
@@ -16,7 +16,7 @@ on:
     paths:
       - 'test/**'
       - 'assert-equals/**'
-      - 'assert-file-exists/**'
+      - 'assert-path-exists/**'
       - 'assert-file-not-exists/**'
       - 'assert-not-equals/**'
       - '.github/workflows/ci-bash-test.yml'
