--- a/assert-path-not-exists/action.yml
+++ b/assert-path-not-exists/action.yml
@@ -1,21 +1,21 @@
 inputs:
   path:
-    description: The file path to check for non-existence.
+    description: The path to check for non-existence.
     required: true
   message:
     description: An optional message to display on failure.
     type: string
     default: ""
 
-name: Assert File Not Exists
-description: Asserts that a specified file does not exist. Fails the job if it does.
+name: Assert Path Not Exists
+description: Asserts that a specified path does not exist. Fails the job if it does.
 runs:
   using: composite
   steps:
     - shell: bash
       id: assert
       run: |
-        chmod +x "$GITHUB_ACTION_PATH/assert-file-not-exists"
+        chmod +x "$GITHUB_ACTION_PATH/assert-path-not-exists"
         INPUT_PATH="${{ inputs.path }}" \
           INPUT_MESSAGE="${{ inputs.message }}" \
-          "$GITHUB_ACTION_PATH/assert-file-not-exists"
+          "$GITHUB_ACTION_PATH/assert-path-not-exists"
