--- a/.github/workflows/integ-test-path-exists.yml
+++ b/.github/workflows/integ-test-path-exists.yml
@@ -27,9 +27,10 @@ jobs:
         uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6
         with:
           path: ${{ steps.create-temp-file.outputs.existing-file-path }}
-          name: temp-file
+          name: temp-file-path-exists
           if-no-files-found: error
           retention-days: 1
+          overwrite: true
 
   test-correct-path-with-message:
     strategy:
@@ -44,7 +45,7 @@ jobs:
       - name: Download Temp File
         uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131 # v7
         with:
-          name: temp-file
+          name: temp-file-path-exists
       - name: Act
         id: act
         continue-on-error: true
@@ -71,7 +72,7 @@ jobs:
       - name: Download Temp File
         uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131 # v7
         with:
-          name: temp-file
+          name: temp-file-path-exists
       - name: Act
         id: act
         continue-on-error: true
