--- a/.github/workflows/integ-test-path-not-exists.yml
+++ b/.github/workflows/integ-test-path-not-exists.yml
@@ -17,6 +17,8 @@ jobs:
       existing-file-path: ${{ steps.create-temp-file.outputs.existing-file-path }}
     steps:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
+      - name: Initialize integration test
+        uses: ./.github/actions/init-integ-test
       - name: Create Temp File
         id: create-temp-file
         run: |
@@ -42,6 +44,8 @@ jobs:
     needs: before-all
     steps:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
+      - name: Initialize integration test
+        uses: ./.github/actions/init-integ-test
       - name: Act
         id: act
         continue-on-error: true
@@ -65,6 +69,8 @@ jobs:
     needs: before-all
     steps:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
+      - name: Initialize integration test
+        uses: ./.github/actions/init-integ-test
       - name: Act
         id: act
         continue-on-error: true
@@ -87,6 +93,8 @@ jobs:
     needs: before-all
     steps:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
+      - name: Initialize integration test
+        uses: ./.github/actions/init-integ-test
       - name: Download Temp File
         uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131 # v7
         with:
@@ -114,6 +122,8 @@ jobs:
     needs: before-all
     steps:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
+      - name: Initialize integration test
+        uses: ./.github/actions/init-integ-test
       - name: Download Temp File
         uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131 # v7
         with:
