--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,3 @@
 {
-	"recommendations": ["bierner.github-markdown-preview", "GitHub.vscode-github-actions"]
+	"recommendations": ["bierner.github-markdown-preview", "GitHub.vscode-github-actions", "dbaeumer.vscode-eslint", "esbenp.prettier-vscode"]
 }
