--- a/.github/workflows/ci-integ-test-full.yml
+++ b/.github/workflows/ci-integ-test-full.yml
@@ -27,4 +27,5 @@ jobs:
     with:
       runner-os: '["ubuntu-latest", "windows-latest", "macos-latest"]'
       detect-changes: false
+      skip-dist: true
     secrets: inherit
