--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,19 +1,47 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:recommended", "group:allNonMajor", "helpers:pinGitHubActionDigests", ":pinDependencies"],
+  "extends": [
+    "config:recommended",
+    "group:allNonMajor",
+    "helpers:pinGitHubActionDigests"
+  ],
   "schedule": ["before 12pm on Saturday"],
-  "packageRules": [
-    {
-      "automerge": true,
-      "matchCurrentVersion": "/^0\\./",
-      "matchUpdateTypes": ["patch"],
-      "platformAutomerge": true
-    },
-    {
-      "automerge": true,
-      "matchCurrentVersion": ">=1.0.0",
-      "matchUpdateTypes": ["minor", "patch"],
-      "platformAutomerge": true
-    }
-  ]
+  "github-actions": {
+    "extends": [":pinDependencies"],
+    "packageRules": [
+      {
+        "automerge": true,
+        "matchCurrentVersion": "/^0\\./",
+        "matchUpdateTypes": ["patch"],
+        "platformAutomerge": true
+      },
+      {
+        "automerge": true,
+        "matchCurrentVersion": ">=1.0.0",
+        "matchUpdateTypes": ["minor", "patch"],
+        "platformAutomerge": true
+      }
+    ]
+  },
+  "npm": {
+    "packageRules": [
+      {
+        "automerge": true,
+        "matchCurrentVersion": "/^0\\./",
+        "matchUpdateTypes": ["patch"],
+        "platformAutomerge": true
+      },
+      {
+        "automerge": true,
+        "matchCurrentVersion": ">=1.0.0",
+        "matchUpdateTypes": ["minor", "patch"],
+        "platformAutomerge": true
+      },
+			{
+				"enabled": false,
+				"matchDepTypes": ["engines"]
+			}
+    ],
+    "rangeStrategy": "bump"
+  }
 }
